# SimplyFlat

./: CMakeLists.txt  SimplyFlat.sln  SimplyFlat.vcproj  SimplyFlat.vcxproj
dep/SOIL/: SOIL.c
include/: Defines.h  SimplyFlat.h  Text.h  UI.h  UIManager.h
src/: Drawing.cpp  Init.cpp  Interface.cpp  Text.cpp  Textures.cpp
src/UI/: UIManager.cpp  UI_Button.cpp  UI_Element.cpp  UI_Label.cpp  UI_Textbox.cpp
