CMAKE_MINIMUM_REQUIRED( VERSION 2.6 FATAL_ERROR )

PROJECT( "SimplyFlat" )

SET( CMAKE_MODULE_PATH
     "${PROJECT_SOURCE_DIR}/cmake"
     "${CMAKE_MODULE_PATH}" )

SET( TARGET_NAME        "SimplyFlat" )
SET( TARGET_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include" )
SET( TARGET_SOURCE_DIR  "${PROJECT_SOURCE_DIR}/src" )

INCLUDE_DIRECTORIES( "${TARGET_INCLUDE_DIR}" )

FIND_PACKAGE( Freetype )

ADD_LIBRARY( SimplyFlat STATIC
    ${TARGET_SOURCE_DIR}/Drawing.cpp
    ${TARGET_SOURCE_DIR}/Init.cpp
    ${TARGET_SOURCE_DIR}/Interface.cpp
    ${TARGET_SOURCE_DIR}/Text.cpp
    ${TARGET_SOURCE_DIR}/Textures.cpp
    )

INCLUDE_DIRECTORIES( INCLUDE_DIRECTORIES
                     ${FREETYPE_INCLUDE_DIRS} )

ADD_DEFINITIONS(-lGL)

TARGET_LINK_LIBRARIES( SimplyFlat Freetype  )
